--- a/RESTful-API-Final/app.yaml
+++ b/RESTful-API-Final/app.yaml
@@ -3,8 +3,9 @@ runtime: python37
 handlers:
   # This configures Google App Engine to serve the files in the app's static
   # directory.
-- url: /static
-  static_dir: static
+- url: /favicon.ico
+  static_files: media/img/favicon.ico
+  upload: media/img/favicon.ico
 
   # This handler routes all requests not caught above to your main app. It is
   # required when static routes are defined, but can be omitted (along with
